2008-09-26  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/gstrtpamrdepay.c: (gst_rtp_amr_depay_class_init),
	(gst_rtp_amr_depay_process):
	Mark DISCONT on output buffers when the marker bit signals a new talk
	spurt.

	* gst/rtp/gstrtpamrpay.c: (gst_rtp_amr_pay_handle_buffer):
	Set the marker bit for buffers with a DISCONT flag to signal a talk
	spurt.

2008-09-26  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/Makefile.am:
	* gst/rtp/gstrtp.c: (plugin_init):
	* gst/rtp/gstrtpmp4apay.c: (gst_rtp_mp4a_pay_get_type),
	(gst_rtp_mp4a_pay_base_init), (gst_rtp_mp4a_pay_class_init),
	(gst_rtp_mp4a_pay_init), (gst_rtp_mp4a_pay_finalize),
	(gst_rtp_mp4a_pay_parse_audio_config), (gst_rtp_mp4a_pay_new_caps),
	(gst_rtp_mp4a_pay_setcaps), (gst_rtp_mp4a_pay_handle_buffer),
	(gst_rtp_mp4a_pay_change_state), (gst_rtp_mp4a_pay_plugin_init):
	* gst/rtp/gstrtpmp4apay.h:
	Added MP4A-LATM payloader to match the depayloader.

2008-09-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/videomixer/videomixer.c: (gst_videomixer_fill_queues),
	(gst_videomixer_sink_event):
	Handle segments a little better. Fixes #537361.

2008-09-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_parse_methods):
	Don't assume the server supports PAUSE by default. Fixes #551048.

2008-09-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/udp/gstudpsrc.c: (gst_udpsrc_class_init),
	(gst_udpsrc_set_uri), (gst_udpsrc_start):
	Switch on the socket family to get the addrlen size right.

2008-09-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Daniel Franke <df at dfranke dot us>

	* gst/udp/gstudpsrc.c: (gst_udpsrc_create), (gst_udpsrc_start):
	OS X's bind() implementation is picky about its addrlen parameter and
	fails with EINVAL if it is larger than expected for the socket's address
	family. Set the length to the expected length instead. Fixes #553191.

2008-09-23  Wim Taymans  <wim.taymans@collabora.co.uk>
